--- a/_publications/TKDE2025.md
+++ b/_publications/TKDE2025.md
@@ -1,11 +1,11 @@
 ---
-title: "Reconstructing Human Activities via Coupling Mobile Phone Data with Location-Based Social Networks"
+title: "Tricolore: Multi-Behavior User Profiling for Enhanced Candidate Generation in Recommender Systems"
 collection: publications
-date: 2023-10-01
-venue: 'Travel Behaviour and Society'
-paperurl: 'http://XiaoZHOUCAM.github.io/files/TBS2023.pdf'
+date: 2025-04-07
+venue: 'IEEE Transactions on Knowledge and Data Engineering (TKDE)'
+paperurl: 'https://ieeexplore.ieee.org/document/10955185'
 ---
 
-Le Huang, Fan Xia, Hui Chen, Bowen Hu, **Xiao Zhou**, Chunxiao Li, Yaohui Jin, Yanyan Xu.
+**Xiao Zhou**, Zhongxiang Zhao, Hanze Guo.
 
-In the era of big data, the ubiquity of location-aware portable devices provides an unprecedented opportunity to understand inhabitants’ behavior and their interactions with the built environments. Among the widely used data resources, mobile phone data is the one passively collected and has the largest coverage in the population. However, mobile operators cannot pinpoint one user within meters, leading to the difficulties in activity inference. To that end, we propose a data analysis framework to identify user’s activity via coupling the mobile phone data with location-based social networks (LBSN) data. The two datasets are integrated into a Bayesian inference module, considering people’s circadian rhythms in both time and space. Specifically, the framework considers the pattern of arrival time to each type of facility and the spatial distribution of facilities. The former can be observed from the LBSN Data and the latter is provided by the points of interest (POIs) dataset. Taking Shanghai as an example, we reconstruct the activity chains of 1,000,000 active mobile phone users and analyze the temporal and spatial characteristics of each activity type. We assess the results with some official surveys and a real-world check-in dataset collected in Shanghai, indicating that the proposed method can capture and analyze human activities effectively. Next, we cluster users’ inferred activity chains with a topic model to understand the behavior of different groups of users. This data analysis framework provides an example of reconstructing and understanding the activity of the population at an urban scale with big data fusion.
+Online platforms aggregate extensive user feedback across diverse behaviors, providing a rich source for enhancing user engagement. Traditional recommender systems, however, typically optimize for a single target behavior and represent user preferences with a single vector, limiting their ability to handle multiple important behaviors or optimization objectives. This conventional approach also struggles to capture the full spectrum of user interests, resulting in a narrow item pool during candidate generation. To address these limitations, we present Tricolore, a versatile multi-vector learning framework that uncovers connections between different behavior types for more robust candidate generation. Tricolore's adaptive multi-task structure is also customizable to specific platform needs. To manage the variability in sparsity across behavior types, we incorporate a behavior-wise multi-view fusion module that dynamically enhances learning. Moreover, a popularity-balanced strategy ensures the recommendation list balances accuracy with item popularity, fostering diversity and improving overall performance. Extensive experiments on public datasets demonstrate Tricolore's effectiveness across various recommendation scenarios, from short video platforms to e-commerce. By leveraging a shared base embedding strategy, Tricolore also significantly improves the performance for cold-start users.
