--- a/_publications/TKDE2025.md
+++ b/_publications/TKDE2025.md
@@ -6,6 +6,6 @@ venue: 'IEEE Transactions on Knowledge and Data Engineering (TKDE)'
 paperurl: 'https://ieeexplore.ieee.org/document/10955185'
 ---
 
-**Xiao Zhou**, Zhongxiang Zhao, Hanze Guo.
+**Xiao Zhou\***, Zhongxiang Zhao, Hanze Guo.
 
 Online platforms aggregate extensive user feedback across diverse behaviors, providing a rich source for enhancing user engagement. Traditional recommender systems, however, typically optimize for a single target behavior and represent user preferences with a single vector, limiting their ability to handle multiple important behaviors or optimization objectives. This conventional approach also struggles to capture the full spectrum of user interests, resulting in a narrow item pool during candidate generation. To address these limitations, we present Tricolore, a versatile multi-vector learning framework that uncovers connections between different behavior types for more robust candidate generation. Tricolore's adaptive multi-task structure is also customizable to specific platform needs. To manage the variability in sparsity across behavior types, we incorporate a behavior-wise multi-view fusion module that dynamically enhances learning. Moreover, a popularity-balanced strategy ensures the recommendation list balances accuracy with item popularity, fostering diversity and improving overall performance. Extensive experiments on public datasets demonstrate Tricolore's effectiveness across various recommendation scenarios, from short video platforms to e-commerce. By leveraging a shared base embedding strategy, Tricolore also significantly improves the performance for cold-start users.
