--- a/_publications/AAAI2025_p1.md
+++ b/_publications/AAAI2025_p1.md
@@ -1,11 +1,11 @@
 ---
-title: "Causally Aware Generative Adversarial Networks for Light Pollution Control"
+title: "MotifGPL: Motif-Enhanced Graph Prototype Learning for Deciphering Urban Social Segregation"
 collection: publications
-date: 2024-02-20
-venue: 'Proceedings of the 38th Annual AAAI Conference on Artificial Intelligence (AAAI)'
-paperurl: 'http://XiaoZHOUCAM.github.io/files/AAAI24_CAGAN.pdf'
+date: 2025-02-25
+venue: 'Proceedings of the 39th Annual AAAI Conference on Artificial Intelligence (AAAI)'
+paperurl: 'file:///Users/zhouxiao/Downloads/35026-Article%20Text-39093-1-2-20250410.pdf'
 ---
 
-Yuyao Zhang, Ke Guo, **Xiao Zhou**\*.
+Tengfei He, **Xiao Zhou**\*.
 
-Artificial light plays an integral role in modern cities, significantly enhancing human productivity and the efficiency of civilization. However, excessive illumination can lead to light pollution, posing non-negligible threats to economic burdens, ecosystems, and human health. Despite its critical importance, the exploration of its causes remains relatively limited within the field of artificial intelligence, leaving an incomplete understanding of the factors contributing to light pollution and sustainable illumination planning distant. To address this gap, we introduce a novel framework named Causally Aware Generative Adversarial Networks (CAGAN). This innovative approach aims to uncover the fundamental drivers of light pollution within cities and offer intelligent solutions for optimal illumination resource allocation in the context of sustainable urban development. We commence by examining light pollution across 33,593 residential areas in seven global metropolises. Our findings reveal substantial influences on light pollution levels from various building types, notably grasslands, commercial centers and residential buildings as significant contributors. These discovered causal relationships are seamlessly integrated into the generative modeling framework, guiding the process of generating light pollution maps for diverse residential areas. Extensive experiments showcase CAGAN’s potential to inform and guide the implementation of effective strategies to mitigate light pollution. Our code and data are publicly available at https://github.com/zhangyuuao/Light Pollution CAGAN.
+Social segregation in cities, spanning racial, residential, and income dimensions, is becoming increasingly diverse and severe. As urban spaces and social dynamics grow more complex, residents experience varying levels of segregation, which, if left unaddressed, could exacerbate crime rates, fuel social tensions, and lead to other societal challenges. Effectively addressing these issues requires a comprehensive analysis of the underlying structures of urban spaces and resident interactions. While previous studies have primarily focused on surface-level indicators of segregation, they often fail to explore the complexity of urban structure and mobility dynamics, leaving gaps in understanding modern segregation patterns. To fill this gap, we propose the Motif-Enhanced Graph Prototype Learning (MotifGPL) framework, offering a novel approach to studying urban segregation. The framework consists of three key modules: prototype-based graph structure extraction, motif distribution discovery, and urban graph reconstruction. Specifically, we use prototype-based learning to extract key urban graph prototypes from both spatial and origin-destination graphs, incorporating attributes such as points of interest, street images, and flow indices. The motif distribution discovery module enhances interpretability by matching each prototype to similar motifs, which represent simplified graph structures that reflect local patterns. These motifs are then used to guide the reconstruction of urban graphs, enabling a more detailed exploration of spatial structures and mobility patterns. By identifying critical motifs influencing urban segregation, MotifGPL offers insights to guide the design of urban environments that can help reduce segregation. Experimental results demonstrate that MotifGPL effectively uncovers these key motifs and provides actionable insights for mitigating segregation. 
