--- a/_publications/AAAI2025_p2.md
+++ b/_publications/AAAI2025_p2.md
@@ -1,11 +1,11 @@
 ---
-title: "Ada-Retrieval: An Adaptive Multi-Round Retrieval Paradigm for Sequential Recommendations"
+title: "FAP-CD: Fairness-Driven Age-Friendly Community Planning via Conditional Diffusion Generation"
 collection: publications
-date: 2024-02-20
-venue: 'Proceedings of the 38th Annual AAAI Conference on Artificial Intelligence (AAAI)'
-paperurl: 'http://XiaoZHOUCAM.github.io/files/AAAI24_AdaRetrieval.pdf'
+date: 2025-02-25
+venue: 'Proceedings of the 39th Annual AAAI Conference on Artificial Intelligence (AAAI)'
+paperurl: 'http://XiaoZHOUCAM.github.io/files/FAP_CD_AAAI25.pdf'
 ---
 
-Lei Li, Jianxun Lian, **Xiao Zhou**\*, Xing Xie. 
+Jinlin Li, Xintong Li, **Xiao Zhou**\*. 
 
-Retrieval models aim at selecting a small set of item candidates which match the preference of a given user. They play a vital role in large-scale recommender systems since subsequent models such as rankers highly depend on the quality of item candidates. However, most existing retrieval models employ a single-round inference paradigm, which may not adequately capture the dynamic nature of user preferences and stuck in one area in the item space. In this paper, we propose Ada-Retrieval, an adaptive multi-round retrieval paradigm for recommender systems that iteratively refines user representations to better capture potential candidates in the full item space. Ada-Retrieval comprises two key modules: the item representation adapter and the user representation adapter, designed to inject context information into items’ and users’ representations. The framework maintains a model-agnostic design, allowing seamless integration with various backbone models such as RNNs or Transformers. We perform experiments on three widely used public datasets, incorporating five powerful sequential recommenders as backbone models. Our results demonstrate that Ada-Retrieval significantly enhances the performance of various base models, with consistent improvements observed across different datasets. Our code and data are publicly available at: https://github.com/ll0ruc/Ada- Retrieval.
+As global populations age rapidly, incorporating age-specific considerations into urban planning has become essential to addressing the urgent demand for age-friendly built environments and ensuring sustainable urban development. However, current practices often overlook these considerations, resulting in inadequate and unevenly distributed elderly services in cities. There is a pressing need for equitable and optimized urban renewal strategies to support effective age-friendly planning. To address this challenge, we propose a novel framework, Fairness-driven Age-friendly community Planning via Conditional Diffusion generation (FAP-CD). FAP-CD leverages a conditioned graph denoising diffusion probabilistic model to learn the joint probability distribution of aging facilities and their spatial relationships at a fine-grained regional level. Our framework generates optimized facility distributions by iteratively refining noisy graphs, conditioned on the needs of the elderly during the diffusion process. Key innovations include a demand-fairness pre-training module that integrates community demand features and facility characteristics using an attention mechanism and min-max optimization, ensuring equitable service distribution across regions. Additionally, a discrete graph structure captures walkable accessibility within regional road networks, guiding model sampling. To enhance information integration, we design a graph denoising network with an attribute augmentation module and a hybrid graph message aggregation module, combining local and global node and edge information. Empirical results across multiple metrics demonstrate the effectiveness of FAP-CD in balancing age-friendly needs with regional equity, achieving an average improvement of 41% over competitive baseline models. 
