--- a/_publications/AAAI2025_p1.md
+++ b/_publications/AAAI2025_p1.md
@@ -3,7 +3,7 @@ title: "MotifGPL: Motif-Enhanced Graph Prototype Learning for Deciphering Urban 
 collection: publications
 date: 2025-02-25
 venue: 'Proceedings of the 39th Annual AAAI Conference on Artificial Intelligence (AAAI)'
-paperurl: 'file:///Users/zhouxiao/Downloads/35026-Article%20Text-39093-1-2-20250410.pdf'
+paperurl: 'http://XiaoZHOUCAM.github.io/files/AAAI25_MotifGPL.pdf'
 ---
 
 Tengfei He, **Xiao Zhou**\*.
