--- a/_publications/AIJ2025.md
+++ b/_publications/AIJ2025.md
@@ -3,7 +3,7 @@ title: "CureGraph: Contrastive Multi-Modal Graph Representation Learning for Urb
 collection: publications
 date: 2025-03-01
 venue: 'Artificial Intelligence'
-paperurl: 'https://dl.acm.org/doi/10.1016/j.artint.2024.104278'
+paperurl: 'http://XiaoZHOUCAM.github.io/files/AIJ25_CureGraph.pdf'
 ---
 
 Jinlin Li, **Xiao Zhou**\*.
