--- a/_publications/TKDE2025.md
+++ b/_publications/TKDE2025.md
@@ -3,7 +3,7 @@ title: "Tricolore: Multi-Behavior User Profiling for Enhanced Candidate Generati
 collection: publications
 date: 2025-04-07
 venue: 'IEEE Transactions on Knowledge and Data Engineering (TKDE)'
-paperurl: 'https://ieeexplore.ieee.org/document/10955185'
+paperurl: 'http://XiaoZHOUCAM.github.io/files/Tricolore_TKDE25.pdf'
 ---
 
 **Xiao Zhou\***, Zhongxiang Zhao, Hanze Guo.
