--- a/_publications/AIJ2025.md
+++ b/_publications/AIJ2025.md
@@ -2,7 +2,7 @@
 title: "MotiveBench: How Far Are We From Human-Like Motivational Reasoning in Large Language Models?"
 collection: publications
 date: 2025-07-27
-venue: 'The 63rd Annual Meeting of the Association for Computational Linguistics (ACL)'
+venue: 'Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (ACL)'
 paperurl: 'http://XiaoZHOUCAM.github.io/files/MotiveBench_ACL25.pdf'
 ---
 
