--- a/_publications/AIJ2025.md
+++ b/_publications/AIJ2025.md
@@ -6,6 +6,6 @@ venue: 'Proceedings of the 63rd Annual Meeting of the Association for Computatio
 paperurl: 'http://XiaoZHOUCAM.github.io/files/MotiveBench_ACL25.pdf'
 ---
 
-Jinlin Li, **Xiao Zhou**\*.
+Jinlin Li & **Xiao Zhou**\*.
 
 Large language models (LLMs) have been widely adopted as the core of agent frameworks in various scenarios, such as social simulations and AI companions. However, the extent to which they can replicate human-like motivations remains an underexplored question. Existing benchmarks are constrained by simplistic scenarios and the absence of character identities, resulting in an information asymmetry with real-world situations. To address this gap, we propose MotiveBench, which consists of 200 rich contextual scenarios and 600 reasoning tasks covering multiple levels of motivation. Using MotiveBench, we conduct extensive experiments on seven popular model families, comparing different scales and versions within each family. The results show that even the most advanced LLMs still fall short in achieving human-like motivational reasoning. Our analysis reveals key findings, including the difficulty LLMs face in reasoning about "love & belonging" motivations and their tendency toward excessive rationality and idealism. These insights highlight a promising direction for future research on the humanization of LLMs. 
