--- a/_publications/ACL2025.md
+++ b/_publications/ACL2025.md
@@ -1,11 +1,11 @@
 ---
-title: "MotiveBench: How Far Are We From Human-Like Motivational Reasoning in Large Language Models?"
+title: "CureGraph: Contrastive Multi-Modal Graph Representation Learning for Urban Living Circle Health Pro­filing and Prediction"
 collection: publications
-date: 2025-07-27
-venue: 'Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (ACL)'
-paperurl: 'http://XiaoZHOUCAM.github.io/files/MotiveBench_ACL25.pdf'
+date: 2025-01-02
+venue: 'Articial Intelligence 340 (2025) 104278'
+paperurl: 'http://XiaoZHOUCAM.github.io/files/AIJ25_CureGraph.pdf'
 ---
 
 Jinlin Li & **Xiao Zhou**\*.
 
-Large language models (LLMs) have been widely adopted as the core of agent frameworks in various scenarios, such as social simulations and AI companions. However, the extent to which they can replicate human-like motivations remains an underexplored question. Existing benchmarks are constrained by simplistic scenarios and the absence of character identities, resulting in an information asymmetry with real-world situations. To address this gap, we propose MotiveBench, which consists of 200 rich contextual scenarios and 600 reasoning tasks covering multiple levels of motivation. Using MotiveBench, we conduct extensive experiments on seven popular model families, comparing different scales and versions within each family. The results show that even the most advanced LLMs still fall short in achieving human-like motivational reasoning. Our analysis reveals key findings, including the difficulty LLMs face in reasoning about "love & belonging" motivations and their tendency toward excessive rationality and idealism. These insights highlight a promising direction for future research on the humanization of LLMs. 
+The early detection and prediction of health status decline among the elderly at the neighborhood level are of great significance for urban planning and public health policymaking. While existing studies aﬃrm the connection between living environments and health outcomes, most rely on single data modalities or simplistic feature concatenation of multi-modal information, limiting their ability to comprehensively pr­file the health-oriented urban environments. To fill this gap, we proposeCureGraph, acontrastive multi-modalrepresentation learning framework for urban health prediction that employsgraph-based techniques to infer the prevalence of common chronic diseases among the elderly within the urban living circles of each neighborhood. CureGraph leverages rich multi-modal information, including photos and textual reviews of residential areas and their surrounding points of interest, to generate urban neighborhood embeddings. By integrating pre-trained visual and textual encoders with graph modeling techniques, CureGraph captures cross-modal spatial dependencies, oﬀering a comprehensive understanding of urban environments tailored to elderly health considerations. Extensive experiments on real-world datasets demonstrate that CureGraph improves the best baseline by 28% on average in terms of 𝑅2 across elderly disease risk prediction tasks. Moreover, the model enables the ident­fication of stage-wise chronic disease progression and supports comparative public health analysis across neighborhoods, oﬀering actionable insights for sustainable urban development and enhanced quality of life. The code is publicly available at https://github.com/jinlin2021/CureGraph.
