--- a/_publications/ACL2025.md
+++ b/_publications/ACL2025.md
@@ -2,7 +2,7 @@
 title: "CureGraph: Contrastive Multi-Modal Graph Representation Learning for Urban Living Circle Health Pro­filing and Prediction"
 collection: publications
 date: 2025-01-02
-venue: 'Articial Intelligence 340 (2025) 104278'
+venue: 'Articial Intelligence'
 paperurl: 'http://XiaoZHOUCAM.github.io/files/AIJ25_CureGraph.pdf'
 ---
 
