--- a/_publications/AIJ2025.md
+++ b/_publications/AIJ2025.md
@@ -1,11 +1,11 @@
 ---
-title: "Reconstructing Human Activities via Coupling Mobile Phone Data with Location-Based Social Networks"
+title: "CureGraph: Contrastive Multi-Modal Graph Representation Learning for Urban Living Circle Health Pro­filing and Prediction"
 collection: publications
-date: 2023-10-01
-venue: 'Travel Behaviour and Society'
-paperurl: 'http://XiaoZHOUCAM.github.io/files/TBS2023.pdf'
+date: 2025-01-02
+venue: 'Articial Intelligence'
+paperurl: 'http://XiaoZHOUCAM.github.io/files/AIJ25_CureGraph.pdf'
 ---
 
-Le Huang, Fan Xia, Hui Chen, Bowen Hu, **Xiao Zhou**, Chunxiao Li, Yaohui Jin, Yanyan Xu.
+Jinlin Li & **Xiao Zhou**\*.
 
-In the era of big data, the ubiquity of location-aware portable devices provides an unprecedented opportunity to understand inhabitants’ behavior and their interactions with the built environments. Among the widely used data resources, mobile phone data is the one passively collected and has the largest coverage in the population. However, mobile operators cannot pinpoint one user within meters, leading to the difficulties in activity inference. To that end, we propose a data analysis framework to identify user’s activity via coupling the mobile phone data with location-based social networks (LBSN) data. The two datasets are integrated into a Bayesian inference module, considering people’s circadian rhythms in both time and space. Specifically, the framework considers the pattern of arrival time to each type of facility and the spatial distribution of facilities. The former can be observed from the LBSN Data and the latter is provided by the points of interest (POIs) dataset. Taking Shanghai as an example, we reconstruct the activity chains of 1,000,000 active mobile phone users and analyze the temporal and spatial characteristics of each activity type. We assess the results with some official surveys and a real-world check-in dataset collected in Shanghai, indicating that the proposed method can capture and analyze human activities effectively. Next, we cluster users’ inferred activity chains with a topic model to understand the behavior of different groups of users. This data analysis framework provides an example of reconstructing and understanding the activity of the population at an urban scale with big data fusion.
+The early detection and prediction of health status decline among the elderly at the neighborhood level are of great significance for urban planning and public health policymaking. While existing studies aﬃrm the connection between living environments and health outcomes, most rely on single data modalities or simplistic feature concatenation of multi-modal information, limiting their ability to comprehensively pr­file the health-oriented urban environments. To fill this gap, we proposeCureGraph, acontrastive multi-modalrepresentation learning framework for urban health prediction that employsgraph-based techniques to infer the prevalence of common chronic diseases among the elderly within the urban living circles of each neighborhood. CureGraph leverages rich multi-modal information, including photos and textual reviews of residential areas and their surrounding points of interest, to generate urban neighborhood embeddings. By integrating pre-trained visual and textual encoders with graph modeling techniques, CureGraph captures cross-modal spatial dependencies, oﬀering a comprehensive understanding of urban environments tailored to elderly health considerations. Extensive experiments on real-world datasets demonstrate that CureGraph improves the best baseline by 28% on average in terms of 𝑅2 across elderly disease risk prediction tasks. Moreover, the model enables the ident­fication of stage-wise chronic disease progression and supports comparative public health analysis across neighborhoods, oﬀering actionable insights for sustainable urban development and enhanced quality of life. The code is publicly available at https://github.com/jinlin2021/CureGraph.
