--- a/_publications/TOIS2025.md
+++ b/_publications/TOIS2025.md
@@ -1,11 +1,11 @@
 ---
-title: "Reconstructing Human Activities via Coupling Mobile Phone Data with Location-Based Social Networks"
+title: "SoREX: Towards Self-Explainable Social Recommendation with Relevant Ego-Path Extraction"
 collection: publications
-date: 2023-10-01
-venue: 'Travel Behaviour and Society'
-paperurl: 'http://XiaoZHOUCAM.github.io/files/TBS2023.pdf'
+date: 2025-09-19
+venue: 'The ACM Transactions on Information Systems (TOIS)'
+paperurl: 'http://XiaoZHOUCAM.github.io/files/TOIS2025.pdf'
 ---
 
-Le Huang, Fan Xia, Hui Chen, Bowen Hu, **Xiao Zhou**, Chunxiao Li, Yaohui Jin, Yanyan Xu.
+Hanze Guo\#, JYijun Ma\#,  **Xiao Zhou**\*.
 
-In the era of big data, the ubiquity of location-aware portable devices provides an unprecedented opportunity to understand inhabitants’ behavior and their interactions with the built environments. Among the widely used data resources, mobile phone data is the one passively collected and has the largest coverage in the population. However, mobile operators cannot pinpoint one user within meters, leading to the difficulties in activity inference. To that end, we propose a data analysis framework to identify user’s activity via coupling the mobile phone data with location-based social networks (LBSN) data. The two datasets are integrated into a Bayesian inference module, considering people’s circadian rhythms in both time and space. Specifically, the framework considers the pattern of arrival time to each type of facility and the spatial distribution of facilities. The former can be observed from the LBSN Data and the latter is provided by the points of interest (POIs) dataset. Taking Shanghai as an example, we reconstruct the activity chains of 1,000,000 active mobile phone users and analyze the temporal and spatial characteristics of each activity type. We assess the results with some official surveys and a real-world check-in dataset collected in Shanghai, indicating that the proposed method can capture and analyze human activities effectively. Next, we cluster users’ inferred activity chains with a topic model to understand the behavior of different groups of users. This data analysis framework provides an example of reconstructing and understanding the activity of the population at an urban scale with big data fusion.
+Social recommendation has been proven effective in addressing data sparsity in user-item interaction modeling by leveraging social networks. The recent integration of Graph Neural Networks (GNNs) has further enhanced prediction accuracy in contemporary social recommendation algorithms. However, many GNN-based approaches in social recommendation lack the ability to furnish meaningful explanations for their predictions. In this study, we confront this challenge by introducing SoREX, a self-explanatory GNN-based social recommendation framework. SoREX adopts a two-tower framework enhanced by friend recommendation, independently modeling social relations and user–item interactions, while jointly optimizing an auxiliary task to reinforce social signals. To offer explanations, we propose a novel ego-path extraction approach. This method involves transforming the ego-net of a target user into a collection of multi-hop ego-paths, from which we extract factor-specific and candidate-aware ego-path subsets as explanations. This process facilitates the summarization of detailed comparative explanations among different candidate items through intricate substructure analysis. Furthermore, we conduct explanation re-aggregation to explicitly correlate explanations with downstream predictions, imbuing our framework with inherent self-explainability. Comprehensive experiments conducted on four widely adopted benchmark datasets validate the effectiveness of SoREX in predictive accuracy. Additionally, qualitative and quantitative analyses confirm the efficacy of the extracted explanations in SoREX. Our code and data are available at https://github.com/antman9914/SoREX.
